--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </section>
 
-        <!-- <section class="our-plants-section container">
+         <section class="our-plants-section container">
             <div class="our-plants-title">
                 <h3><span>Our</span> Plants </h3>
                 <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. <br> From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -98,7 +98,7 @@
             </div>
         </section>
 
-        <section class="flower-lover-section container">
+        <!-- <section class="flower-lover-section container">
             <div class="flower-lover-items">
                 <div class="flower-lover-section-img">
                     <img src="assets/images/flower-store.png" alt="">
