added flower lover and latest deal section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
         </section>
 
-        <!-- <section class="flower-lover-section container">
+        <section class="flower-lover-section container">
             <div class="flower-lover-items">
                 <div class="flower-lover-section-img">
                     <img src="assets/images/flower-store.png" alt="">
@@ -131,7 +131,7 @@
                     <img src="assets/images/deal-zabo.png" alt="">
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
 </body>
 </html>
