added latest deals section

--- a/index.html
+++ b/index.html
@@ -119,18 +119,46 @@
 
         <section class="latest-deals container">
             <div class="latast-deals-content">
-                <h3>Latest  Deals</h3>
-                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <h3><span>Latest</span>  Deals</h3>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
             <div class="latest-deals-layout">
                 <div class="left-deal">
-                    <img src="assets/images/deal-bloom.png" alt="">
-                    <img src="assets/images/deal-ana.png" alt="">
+                    <div class="left-deal-card">
+                        <div class="left-deal-img">
+                            <img src="assets/images/deal-bloom.png" alt="">
+                        </div>
+                        <div class="left-deal-card-content">
+                            <h4>60% Off | Bloon  Plant</h4>
+                            <a href="#">Shop Now</a>
+                        </div>
+                    </div>
+                    <div class="left-deal-item">
+                        <div class="left-deal-img">
+                        <img src="assets/images/deal-ana.png" alt="">
+                        </div>
+                        <div class="left-deal-content">
+                            <h4>30% Off | Ana  Plant</h4>
+                            <a href="#">Shop Now</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="right-deal">
-                    <img src="assets/images/deal-zabo.png" alt="">
+                   <div class="right-deal-img">
+                     <img src="assets/images/deal-zabo.png" alt="">
+                   </div>
+                   <div class="right-deal-content">
+                        <h3>25% Off | Zabo Plant</h3>
+                        <a href="#">Shop Now</a>
+                   </div>
                 </div>
             </div>
+        </section>
+
+        <section class="subscribe-us">
+            <h3>Join the colorful Bunch</h3>
+            <input type="email" placeholder="Write email">
+            <input type="submit" value="subscribe">
         </section>
     </main>
 </body>
