footer section added

--- a/index.html
+++ b/index.html
@@ -156,10 +156,44 @@
         </section>
 
         <section class="subscribe-us">
-            <h3>Join the colorful Bunch</h3>
-            <input type="email" placeholder="Write email">
-            <input type="submit" value="subscribe">
+           <div class="suscribe-content">
+                <h3>Join the colorful Bunch</h3>
+                <input class="subscribe-email" type="email" placeholder="Write email">
+                <input class="subscribe-submit" type="submit" value="subscribe">
+           </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-content container">
+            <div class="footer-brand">
+                <img src="assets/images/logo.png" alt="">
+                <p>Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+            </div>
+            <div class="footer-nav-link">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Help Center</a></li>
+                </ul>
+            </div>
+            <div class="footer-social-link">
+                <img src="assets/icon/icon-linkedin.png" alt="">
+                <img src="assets/icon/icon-twitter.png" alt="">
+                <img src="assets/icon/icon-facebook.png" alt="">
+                <img src="assets/icon/icon-youtube.png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
